[package]
name = "yt-low-poly-terrain-bevy"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14.2" }
# bevy = { version = "0.15.0" }
bevy-fps-counter = "0.5.0"
bevy_dev_tools = "0.15.0"
bevy_panorbit_camera = "0.19.3"
# bevy_panorbit_camera = "0.21.0"
bevy_window = "0.15.0"
noise = "0.9.0"
wgpu = "23.0.1"


# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# [profile.release]
# debug = false
# opt-level = 3

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!


# https://bevyengine.org/learn/quick-start/getting-started/setup/
